# CPP_PRACTICE3

./: .gitignore  .ninja_log  CMakeLists.txt  LICENSE  README.md  later.txt  main  main.cpp  readerror
include/: BufferLayout.h  IndexBuffer.h  Macros.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  core.hpp  renderer.h  types.hpp
include/glad/: glad.h
res/shaders/: frag.glsl  shader.frag  vert.glsl
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  core.cpp  glad.c  glad.cpp  main.cpp  renderer.cpp
